--- a/index.css
+++ b/index.css
@@ -221,7 +221,7 @@ border-radius: 100px;
 
 
 #section1 {
-  background-image:linear-gradient(rgba(5, 0, 0, 0.3),rgba(5, 0, 0, 0.3)) ,url(../img/ll.jpeg);
+  background-image:linear-gradient(rgba(5, 0, 0, 0.3),rgba(5, 0, 0, 0.3)) ,url(ll.jpeg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -583,7 +583,7 @@ color:white;
 
 #section6{
   background-image:linear-gradient(to right bottom,
-    rgba(9, 0, 0, 0.5),rgba(55, 5, 9, 0.5)), url(../img/mi.jpeg);
+    rgba(9, 0, 0, 0.5),rgba(55, 5, 9, 0.5)), url(mi.jpeg);
   background-position: center;
   background-size: cover;
    background-repeat: no-repeat;
