--- a/index.css
+++ b/index.css
@@ -245,7 +245,7 @@ max-width: 696px;
 background: #dc6226;
 color: #ffffff;
  font: 700 36px/36px 'Archivo Narrow', sans-serif;
-margin-top:360px;
+bottom:200px;
 }
 .two p{
   width: 500px;
