--- a/index.css
+++ b/index.css
@@ -233,19 +233,16 @@ text-align: center;
 }
 .two {
   display: flex;
-  /* justify-content: center; */
-/* position: absolute; */
-/* bottom: 0;
-left: 0;
-right: 0; */
+  justify-content: center; 
+position: absolute; 
+ bottom: 27px;
+right: 57px; */
 height: 108px;
-/* margin: 0 auto; */
  width: 100%;
 max-width: 696px;
 background: #dc6226;
 color: #ffffff;
  font: 700 36px/36px 'Archivo Narrow', sans-serif;
- margin-top:450px;
 }
 .two p{
   width: 500px;
