--- a/index.css
+++ b/index.css
@@ -235,7 +235,7 @@ text-align: center;
   display: flex;
   justify-content: center; 
 position: absolute; 
- bottom: 27px;
+ top: 50px;
 right: 57px; */
 height: 108px;
  width: 100%;
