--- a/index.css
+++ b/index.css
@@ -235,7 +235,7 @@ text-align: center;
   display: flex;
   justify-content: center; 
 position: absolute; 
- top: 500px;
+  bottom:-500px;
 right: 70px; */
 height: 108px;
  width: 100%;
