--- a/index.css
+++ b/index.css
@@ -234,9 +234,9 @@ text-align: center;
 .two {
   display: flex;
   justify-content: center; 
-position: absolute; 
+/* position: absolute;  */
 margin-top:500px;
-right: 70px; */
+/* right: 70px; */ */
 height: 108px;
  width: 100%;
 max-width: 696px;
