--- a/index.css
+++ b/index.css
@@ -231,19 +231,19 @@ border-radius: 100px;
 }
 @keyframes slide {
   0%{
-    background-image:linear-gradient(rgba(5, 0, 0, 0.3),rgba(5, 0, 0, 0.3)) ,url(..ll.jpeg);
+    background-image:linear-gradient(rgba(5, 0, 0, 0.3),rgba(5, 0, 0, 0.3)) ,url(ll.jpeg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
   }
   25%{
-    background-image:linear-gradient(rgba(5, 0, 0, 0.3),rgba(5, 0, 0, 0.3)) ,url(..lop.jpg);
+    background-image:linear-gradient(rgba(5, 0, 0, 0.3),rgba(5, 0, 0, 0.3)) ,url(lop.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
   }
   100%{
-    background-image:linear-gradient(rgba(5, 0, 0, 0.3),rgba(5, 0, 0, 0.3)) ,url(..lap.jpeg);
+    background-image:linear-gradient(rgba(5, 0, 0, 0.3),rgba(5, 0, 0, 0.3)) ,url(lap.jpeg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -757,6 +757,7 @@ font-weight: bold;
 /* @media sreen and ( max-width:1024px){
   .icon {
     /* opacity:0; */
+
 
 @media screen and ( max-width:1024px){
   .icon {
